Added some function to the public version
added several useful function to

--- a/Monogen_Search_P.ipynb
+++ b/Monogen_Search_P.ipynb
@@ -100,21 +100,7 @@
     "    def reset(self):\n",
     "        self.__init__()\n",
     "\n",
-    "########################################################################################################################################\n",
     "\n",
-    "def find_monogens(num_list):\n",
-    "    if len(num_list)==5:\n",
-    "        print('test')\n",
-    "        P=poly(num_list)\n",
-    "        f_p=P.make(P.coeff)\n",
-    "        if f_p.is_irreducible(): \n",
-    "            P.monogen_test()\n",
-    "            print( P.solu_coords)\n",
-    "            # print(P.signature)\n",
-    "        else:\n",
-    "            print(f'the polynomial defined by {num_list} is reducible')\n",
-    "    else:\n",
-    "        print('the polynomial must be degree 4')\n",
     "\n",
     "#################################################################################################################################3\n",
     "class poly:\n",
@@ -320,6 +306,126 @@
     "        self.find_signature()\n",
     "        return(self.signature)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16f59fff-e074-445e-8a5c-f5b6a5ab8abd",
+   "metadata": {},
+   "source": [
+    "The next cell contains several usefull function for generating the datasets of quartic orders."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d68cd652-cecc-44e9-a5c0-f59101ab3bab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "########################################################################################################################################\n",
+    "\n",
+    "def find_monogens(num_list):\n",
+    "    if len(num_list)==5:\n",
+    "        print('test')\n",
+    "        P=poly(num_list)\n",
+    "        f_p=P.make(P.coeff)\n",
+    "        if f_p.is_irreducible(): \n",
+    "            P.monogen_test()\n",
+    "            print( P.solu_coords)\n",
+    "            # print(P.signature)\n",
+    "        else:\n",
+    "            print(f'the polynomial defined by {num_list} is reducible')\n",
+    "    else:\n",
+    "        print('the polynomial must be degree 4')\n",
+    "\n",
+    "##############################################################################################################################\n",
+    "def type_II_test(nums):\n",
+    "    #take a list of checks and check a necessary condition for the associated order to be type II\n",
+    "    # The function returns false if the order is not type II and true if it might be type II\n",
+    "    P=poly(nums)\n",
+    "    P.monogen_test()\n",
+    "    M=list(P.solu_coords.values())\n",
+    "    for s in M:\n",
+    "        if isinstance(s, set):  \n",
+    "            for e in s:\n",
+    "                if (e[2]==0) and (e != (1,0,0)):\n",
+    "                    return(True)\n",
+    "    return(False)\n",
+    "###########################################################################################################################################\n",
+    "def gal_group(nums):\n",
+    "    # Finds the Galois group of the polynomial with coefficients coming from the array nums\n",
+    "    P=poly(nums)\n",
+    "    f_p = P.make(P.coeff)\n",
+    "    r_p = P.make(P.cubic_res)\n",
+    "    if r_p.is_irreducible():\n",
+    "        if r_p.discriminant().is_square():\n",
+    "            return('A_4')\n",
+    "        else:\n",
+    "            return('S_4')\n",
+    "    else:\n",
+    "        if len(r_p.factor())== 3:\n",
+    "            return('V_4')\n",
+    "        else:\n",
+    "            K.<a> = r_p.splitting_field()\n",
+    "            R.<x> = K[]\n",
+    "            rational_roots=r_p.roots(QQ, multiplicities = False)\n",
+    "            root= rational_roots[0]\n",
+    "            g= (x**2 - root*x + P.coeff[4])*(x**2 + P.coeff[1]*x+(P.coeff[2]-root))\n",
+    "            number_of_roots= sum(point[1] for point in  g.roots(K, multiplicities=True))\n",
+    "            check =(number_of_roots ==4)\n",
+    "            if check:\n",
+    "                return('C_4')\n",
+    "            else:\n",
+    "                return('D_4')\n",
+    "\n",
+    "\n",
+    "#############################################################################################################################################\n",
+    "def ring_int_test(nums):\n",
+    "    #test if the ring defined by the polynomial with coefficients from nums is a maximal order\n",
+    "    p=poly(nums)\n",
+    "    f = p.make(p.coeff)\n",
+    "    K.<a> = NumberField(f)\n",
+    "    Za= K.order([1, a, a^2, a^3])\n",
+    "    OK = K.maximal_order()\n",
+    "    return(Za == OK)\n",
+    "\n",
+    "###########################################################################################################################################\n",
+    "def ring_check(nums):\n",
+    "    #find the ratio disc(k)/disc(p) \n",
+    "    p=poly(nums)\n",
+    "    f_p = p.make(p.coeff)\n",
+    "    ring_disc= f_p.discriminant()\n",
+    "    K= NumberField(f_p,'a')\n",
+    "    field_disc= K.discriminant()\n",
+    "    ratio= field_disc/ring_disc\n",
+    "    return(ratio)\n",
+    "\n",
+    "\n",
+    "#############################################################################################################################################\n",
+    "\n",
+    "def ring_info(nums):\n",
+    "    #takes an array of 5 numbers and returns some information about the ring defined by the polynomial with this array as its coefficients\n",
+    "    p= poly(nums)\n",
+    "    f_p=p.make(p.coeff)\n",
+    "    print(f_p.discriminant())\n",
+    "    K = NumberField(f_p, 'a')\n",
+    "    print(K.discriminant())\n",
+    "    ########################\n",
+    "    print('___________________________________________________')\n",
+    "    find_monogens(nums)\n",
+    "\n",
+    "    ###############################\n",
+    "    print('__________________________________________________')\n",
+    "    print('gal group is')\n",
+    "    print(gal_group(nums))\n",
+    "    ################################3\n",
+    "    print('__________________________________')\n",
+    "    print('ring int test')\n",
+    "    print(ring_int_test(nums))\n",
+    "    print('done')"
    ]
   },
   {
